# KairoRayTracer

./: .gitignore  CMakeLists.txt  Camera.cppm  Color.cppm  DepthIntegrator.cppm  Environment.cppm  Film.cppm  ImageIO.cppm  Integrator.cppm  KairoRayTracer.cppm  Light.cppm  Material.cppm  Mesh.cppm  NormalIntegrator.cppm  OBJLoader.cppm  PBRIntegrator.cppm  PathIntegrator.cppm  PreviewWindow.cppm  Primitive.cppm  ProgressiveRenderer.cppm  README.md  RayTracerTypes.cppm  Renderer.cppm  Sampler.cppm  Scene.cppm  SceneParser.cppm  Shading.cppm  Texture.cppm  WhittedIntegrator.cppm
examples/: cli.cpp  preview.cpp
scenes/: area_light_soft_shadow.kairo  bvh_stress.kairo  cornell.kairo  emissive_showcase.kairo  glass_refraction.kairo  mesh_showcase.kairo  mirror_hall.kairo  normal_depth_lab.kairo  parser_reference.kairo  path_showcase.kairo  pbr_showcase.kairo  reflective_spheres.kairo  shadow_lab.kairo  textured_environment_showcase.kairo  triangle_floor.kairo
scenes/assets/: checker.ppm  studio_environment.ppm
tests/: RayTracerTests.cpp
